--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,25 +1,3 @@
-<!-- <h1>Register</h1>
-<form action="/register" method="POST">
-  <div>
-    <label for="firstName">First Name</label>
-    <input type="text" id="firstName" name="firstName" required />
-  </div>
-  <div>
-    <label for="lastName">Last Name</label>
-    <input type="text" id="lastName" name="lastName" required />
-  </div>
-  <div>
-    <label for="email">Email</label>
-    <input type="email" id="email" name="email" required />
-  </div>
-  <div>
-    <label for="password">Password</label>
-    <input type="password" id="password" name="password" required />
-  </div>
-  <button type="submit">Register</button>
-</form>
-Already Registered? <a href="/login">Login</a> -->
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -28,7 +6,7 @@ Already Registered? <a href="/login">Login</a> -->
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <title>Bootstrap Simple Login Form</title>
+    <title>Signup</title>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
