--- a/views/register.ejs
+++ b/views/register.ejs
@@ -98,11 +98,13 @@
         </div>
         <div class="form-group">
           <button type="submit" class="btn btn-primary btn-block">
-            Log in
+            Submit
           </button>
         </div>
       </form>
-      <p class="text-center"><a href="/register">Create an Account</a></p>
+      <p class="text-center">
+        Already have an account?<a href="/register"> Login</a>
+      </p>
     </div>
   </body>
 </html>
