--- a/views/register.ejs
+++ b/views/register.ejs
@@ -103,7 +103,7 @@
         </div>
       </form>
       <p class="text-center">
-        Already have an account?<a href="/register"> Login</a>
+        Already have an account?<a href="/login"> Login</a>
       </p>
     </div>
   </body>
